# akasha

./: akasha.db  akasha_db.py  calibrate_face_baseline.py  drink_event_test.py  emotion_baseline.json  emotion_test.py  face_test.py  listen.py  pyproject.toml  sense.py  test_whisper.py  triage.py  type_test.py  webcam_test.py
