[project]
name = "akasha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.100",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "sounddevice>=0.5.5",
    "tf-keras>=2.21.0",
]
